--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,9 @@
 		"zendframework/zend-modulemanager" : "~2.1",
 		"zendframework/zend-stdlib" : "~2.1",
 		"adfab/core" : "0.*",
-		"zf-commons/zfc-base" : "0.*",
-		"zf-commons/zfc-user" : "0.*",
-		"doctrine/data-fixtures" : "dev-master",
-		"hounddog/doctrine-data-fixture-module" : "dev-master"
+		"hybridauth/hybridauth" : "dev-master",
+		"bjyoungblood/bjy-authorize" : "1.1.*",
+		"zf-commons/zfc-user" : "0.*"
     },
     "require-dev": {
         "doctrine/doctrine-orm-module": "0.*"
