--- a/tests/phpunit.xml.dist
+++ b/tests/phpunit.xml.dist
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<phpunit bootstrap="Bootstrap.php">
+<phpunit bootstrap="./Bootstrap.php" colors="true">
     <testsuites>
         <testsuite name="adfabuser">
             <directory>./AdfabUserTest</directory>
